Implemented better spell casting and fixed bugs